// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs only render one tab title as selected 1`] = `
<styled.div
  data-cosmos-key="tabs"
  id="cosmos-0"
>
  <styled.ul
    data-cosmos-key="tabs.list"
    role="tablist"
  >
    <styled.li
      data-cosmos-key="tabs.list-item"
      key="tabscosmos-0-0"
      role="presentation"
    >
      <styled.button
        aria-controls="tabscosmos-0-0-tab"
        aria-selected={true}
        data-cosmos-key="tabs.link"
        id="tabscosmos-0-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex="0"
        type="button"
      />
    </styled.li>
    <styled.li
      data-cosmos-key="tabs.list-item"
      key="tabscosmos-0-1"
      role="presentation"
    >
      <styled.button
        aria-controls="tabscosmos-0-1-tab"
        aria-selected={false}
        data-cosmos-key="tabs.link"
        id="tabscosmos-0-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex="-1"
        type="button"
      />
    </styled.li>
    <styled.li
      data-cosmos-key="tabs.list-item"
      key="tabscosmos-0-2"
      role="presentation"
    >
      <styled.button
        aria-controls="tabscosmos-0-2-tab"
        aria-selected={false}
        data-cosmos-key="tabs.link"
        id="tabscosmos-0-2"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex="-1"
        type="button"
      />
    </styled.li>
  </styled.ul>
  <styled.div
    aria-labelledby="tabscosmos-0-0"
    data-cosmos-key="tabs.item"
    id="tabscosmos-0-0-tab"
    key=".0"
    role="tabpanel"
    title="Title 1"
  >
    <div
      className="content-1"
    />
  </styled.div>
</styled.div>
`;

exports[`Tabs only render one tab title as selected 2`] = `
<styled.div
  data-cosmos-key="tabs"
  id="cosmos-0"
>
  <styled.ul
    data-cosmos-key="tabs.list"
    role="tablist"
  >
    <styled.li
      data-cosmos-key="tabs.list-item"
      key="tabscosmos-0-0"
      role="presentation"
    >
      <styled.button
        aria-controls="tabscosmos-0-0-tab"
        aria-selected={false}
        data-cosmos-key="tabs.link"
        id="tabscosmos-0-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex="-1"
        type="button"
      />
    </styled.li>
    <styled.li
      data-cosmos-key="tabs.list-item"
      key="tabscosmos-0-1"
      role="presentation"
    >
      <styled.button
        aria-controls="tabscosmos-0-1-tab"
        aria-selected={true}
        data-cosmos-key="tabs.link"
        id="tabscosmos-0-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex="0"
        type="button"
      />
    </styled.li>
    <styled.li
      data-cosmos-key="tabs.list-item"
      key="tabscosmos-0-2"
      role="presentation"
    >
      <styled.button
        aria-controls="tabscosmos-0-2-tab"
        aria-selected={false}
        data-cosmos-key="tabs.link"
        id="tabscosmos-0-2"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex="-1"
        type="button"
      />
    </styled.li>
  </styled.ul>
  <styled.div
    aria-labelledby="tabscosmos-0-1"
    data-cosmos-key="tabs.item"
    id="tabscosmos-0-1-tab"
    key=".1"
    role="tabpanel"
    title="Title 2"
  >
    <div
      className="content-2"
    />
  </styled.div>
</styled.div>
`;

exports[`Tabs only render one tab title as selected 3`] = `
<styled.div
  data-cosmos-key="tabs"
  id="cosmos-0"
>
  <styled.ul
    data-cosmos-key="tabs.list"
    role="tablist"
  >
    <styled.li
      data-cosmos-key="tabs.list-item"
      key="tabscosmos-0-0"
      role="presentation"
    >
      <styled.button
        aria-controls="tabscosmos-0-0-tab"
        aria-selected={false}
        data-cosmos-key="tabs.link"
        id="tabscosmos-0-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex="-1"
        type="button"
      />
    </styled.li>
    <styled.li
      data-cosmos-key="tabs.list-item"
      key="tabscosmos-0-1"
      role="presentation"
    >
      <styled.button
        aria-controls="tabscosmos-0-1-tab"
        aria-selected={false}
        data-cosmos-key="tabs.link"
        id="tabscosmos-0-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex="-1"
        type="button"
      />
    </styled.li>
    <styled.li
      data-cosmos-key="tabs.list-item"
      key="tabscosmos-0-2"
      role="presentation"
    >
      <styled.button
        aria-controls="tabscosmos-0-2-tab"
        aria-selected={true}
        data-cosmos-key="tabs.link"
        id="tabscosmos-0-2"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex="0"
        type="button"
      />
    </styled.li>
  </styled.ul>
  <styled.div
    aria-labelledby="tabscosmos-0-2"
    data-cosmos-key="tabs.item"
    id="tabscosmos-0-2-tab"
    key=".2"
    role="tabpanel"
    title="Title 3"
  >
    <div
      className="content-3"
    />
  </styled.div>
</styled.div>
`;

exports[`Tabs renders only selected tab content 1`] = `[Function]`;
